Vertical alignment bugs

--- a/css/style.css
+++ b/css/style.css
@@ -114,34 +114,31 @@ label #sign-two {
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.banner-text > * {
-    margin: 1em 0;
+    align-items: center;
 }
 
 .banner-text h2 {
     font-family: Roboto Mono;
     color: #fff;
-    margin-top: auto;
     font-size: 56px;
     text-align: center;
 }
 
 .banner-image {
-    max-width: 55%;
-    min-width: 15%;
-    align-self: flex-end;
     padding-bottom: 60px;
 }
 
 .banner-image img {
-    width: 100%;
+    display: block;
+    max-width: 60%;
+    max-height: 100%;
+    min-height: 40%;
     height: auto;
+    width: auto;
     border-radius: 50%;
+    margin: 0 auto;
 }
 
 @media (max-width: 870px) {
@@ -194,7 +191,7 @@ label #sign-two {
 }
 
 .typewriter {
-    align-self: flex-end;
+
 }
 
 .typewriter h2 {
